--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "no-var": "off"
+    "no-var": "off",
+    "no-empty": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
