--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "framer-motion": "^11.11.17",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.461.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
@@ -42,6 +43,7 @@
     "react-resizable-panels": "^2.1.7",
     "reactflow": "^11.11.4",
     "sonner": "^1.7.0",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
