--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "lucide-react": "^0.461.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
+    "openai": "^4.73.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "reactflow": "^11.11.4",
     "sonner": "^1.7.0",
